apply workaround fix for cJSON symbol collision from mabs-patches
https://github.com/m-ab-s/mabs-patches/blob/master/librist/0001-Workaround-fixes-for-cJSON-symbol-collision.patch

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,7 +1,9 @@
 option('static_analyze', type : 'boolean', value : false)
 option('test', type : 'boolean', value : true)
 #option('builtin_lz4', type: 'boolean', value: false)
+option('disable_json', type: 'boolean', value: false)
 option('builtin_cjson', type: 'boolean', value: false)
+option('external_cjson', type: 'boolean', value: false)
 option('builtin_mbedtls', type: 'boolean', value: false)
 option('built_tools', type: 'boolean', value: true)
 option('fallback_builtin', type: 'boolean', value: true)
